--- a/.github/workflows/docs-parity-updates.yml
+++ b/.github/workflows/docs-parity-updates.yml
@@ -85,7 +85,7 @@ jobs:
           mv -f target/updated_coverage/data/*.json data/coverage
 
       - name: Update Coverage Docs with Persistence Coverage
-        working-diretory: docs
+        working-directory: docs
         run: |
           cd scripts/persistence
           python3 -m venv .venv
