--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,7 @@ enableGitInfo = true
 [taxonomies]
 tag = "tags"
 category = "categories"
+persistence_support = "persistence_support"
 
 [params.taxonomy]
 # set taxonomyCloud = [] to hide taxonomy clouds
@@ -29,7 +30,7 @@ taxonomyCloud = []
 taxonomyCloudTitle = ["Tag Cloud", "Categories"] 
 
 # set taxonomyPageHeader = [] to hide taxonomies on the page headers
-taxonomyPageHeader = ["tags"]
+taxonomyPageHeader = ["tags", "persistence_support"]
 
 
 # Highlighting config
