Update docsy to 0.10

--- a/config.toml
+++ b/config.toml
@@ -62,10 +62,11 @@ id = "UA-101988473-1"
 [languages]
 [languages.en]
 title = "Docs"
-description = "LocalStack Documentation"
 languageName ="English"
 # Weight used for sorting.
 weight = 1
+[languages.en.params]
+description = "LocalStack Documentation"
 
 [markup]
   [markup.goldmark]
@@ -127,7 +128,8 @@ github_branch= "main"
 # gcs_engine_id = "d72aa9b2712488cc3"
 
 # Enable Algolia DocSearch
-algolia_docsearch = true
+[search]
+algolia = true
 
 # Enable Lunr.js offline search
 offlineSearch = false
