--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ enableGitInfo = true
 [taxonomies]
 tag = "tags"
 category = "categories"
-persistence_support = "persistence_support"
+persistence = "persistence"
 
 [params.taxonomy]
 # set taxonomyCloud = [] to hide taxonomy clouds
@@ -30,7 +30,7 @@ taxonomyCloud = []
 taxonomyCloudTitle = ["Tag Cloud", "Categories"] 
 
 # set taxonomyPageHeader = [] to hide taxonomies on the page headers
-taxonomyPageHeader = ["tags", "persistence_support"]
+taxonomyPageHeader = ["tags", "persistence"]
 
 
 # Highlighting config
