Reenable algolia search, fix privacy notice link color in footer

--- a/config.toml
+++ b/config.toml
@@ -128,8 +128,10 @@ github_branch= "main"
 # gcs_engine_id = "d72aa9b2712488cc3"
 
 # Enable Algolia DocSearch
-[search]
-algolia = true
+[params.search.algolia]
+appId = "XBW1JU7CW5"
+apiKey = "6b0341e2f50196d328d088dbb5cd6166"
+indexName = "localstack"
 
 # Enable Lunr.js offline search
 offlineSearch = false
