fix config toml sections, disable click2copy button (we have our own)

--- a/config.toml
+++ b/config.toml
@@ -127,17 +127,19 @@ github_branch= "main"
 # Google Custom Search Engine ID. Remove or comment out to disable search.
 # gcs_engine_id = "d72aa9b2712488cc3"
 
-# Enable Algolia DocSearch
-[params.search.algolia]
-appId = "XBW1JU7CW5"
-apiKey = "6b0341e2f50196d328d088dbb5cd6166"
-indexName = "localstack"
-
 # Enable Lunr.js offline search
 offlineSearch = false
 
 # Enable syntax highlighting and copy buttons on code blocks with Prism
 prism_syntax_highlighting = false
+
+disable_click2copy_chroma = true
+
+# Enable Algolia DocSearch
+[params.search.algolia]
+appId = "XBW1JU7CW5"
+apiKey = "6b0341e2f50196d328d088dbb5cd6166"
+indexName = "localstack"
 
 # User interface configuration
 [params.ui]
