--- a/data/developerhub/applications.json
+++ b/data/developerhub/applications.json
@@ -378,7 +378,7 @@
       "cloudpods": false
     },
     {
-      "title": "Deploying a Database Migration Pipeline and creating CDC with DMS, Kinesis, and RDS MariaDB",
+      "title": "Deploying a Database Migration Pipeline with DMS, Kinesis, and RDS MariaDB",
       "description": "Sample application demonstrating how to use Database Migration Service (DMS) to create change data capture (CDC) and full load tasks using the CDK in Python on LocalStack.",      
       "url": "https://github.com/localstack-samples/sample-dms-kinesis-rds-mariadb",
       "teaser": "https://raw.githubusercontent.com/localstack-samples/sample-dms-kinesis-rds-mariadb/main/dms-mariadb-to-kinesis.jpg",
