Update codeowners file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -21,8 +21,7 @@
 /content/en/user-guide/tools/dns-server @simonrw @joe4dev @dfangl
 
 # chaos engineering
-/content/en/user-guide/chaos-engineering/fault-injection-service/index.md
-/content/en/user-guide/chaos-engineering/outages/index.md
+/content/en/user-guide/chaos-engineering/ @viren-nadkarni
 
 ######################
 ### SERVICE OWNERS ###
