enable one sentence per line rule

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -2,8 +2,8 @@ globs:
   - 'content/**/*.md'
 ignores:
   - 'node_modules'
-# customRules:
-#   - markdownlint-rule-max-one-sentence-per-line
+customRules:
+  - markdownlint-rule-max-one-sentence-per-line
 config:
   MD029: false
   MD046: false
