--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -21,6 +21,5 @@ config:
   MD013: false # Line length
   MD034: false # Bare URL used
   MD032: false # Lists should be surrounded by blank lines
-  blanks-around-headings:
-    lines_above: 0
-    lines_below: 1
+  MD018: false # No space after hash on atx style header
+  MD022: false # Headers should be surrounded by blank lines
