events page behaving weird

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -5,6 +5,7 @@ ignores:
   # Weird behavior with markdownlint; TODO: Fix
   - 'content/en/tutorials/cloud-pods-collaborative-debugging/*'
   - 'content/en/user-guide/integrations/terraform/*'
+  - 'content/en/user-guide/aws/events/*'
 customRules:
   - markdownlint-rule-max-one-sentence-per-line
 config:
