--- a/.github/workflows/docs-parity-updates.yml
+++ b/.github/workflows/docs-parity-updates.yml
@@ -30,6 +30,11 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
       - name: Download metrics data from Moto Integration test pipeline (GitHub)
         working-directory: docs
         run: ./scripts/get_latest_github_metrics.sh ./target main
@@ -85,6 +90,13 @@ jobs:
           # Move the resulting markdown file to the docs repo
           cp -r target/updated_coverage/md/* content/en/references/coverage && rm -R target/updated_coverage/md/
           mv -f target/updated_coverage/data/*.json data/coverage
+
+      - name: Format Parity Coverage Docs 
+        working-directory: docs
+        run: |
+          npm install
+          npm install markdownlint-cli2 --global
+          markdownlint-cli2 --config .markdownlint-cli2.yaml --fix
 
       - name: Check for changes
         id: check-for-changes
