--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -20,6 +20,9 @@
 # DNS server
 /content/en/user-guide/tools/dns-server @simonrw @joe4dev @dfangl
 
+# chaos engineering
+/content/en/user-guide/chaos-engineering/ @viren-nadkarni
+
 ######################
 ### SERVICE OWNERS ###
 ######################
