add dms with kinesis & s3 sample to dev hub

--- a/data/developerhub/applications.json
+++ b/data/developerhub/applications.json
@@ -389,6 +389,19 @@
       "complexity": ["intermediate"],
       "pro": true,
       "cloudpods": false
+    },
+    {
+      "title": "Deploying a Database Migration Pipeline with DMS, Kinesis, and S3",
+      "description": "Sample application demonstrating how to use Database Migration Service (DMS) to use S3 as a source and Kinesis as a target to create full-load and CDC tasks using the CDK in Python.",
+      "url": "https://github.com/localstack-samples/sample-dms-s3-kinesis",
+      "teaser": "https://raw.githubusercontent.com/localstack-samples/sample-dms-s3-kinesis/main/dms-s3-kinesis.jpg",
+      "services": ["dms", "kns", "s3"],
+      "deployment": ["cdk"],
+      "platform": ["python"],
+      "tags": ["databases", "migration"],
+      "complexity": ["intermediate"],
+      "pro": true,
+      "cloudpods": false
     }
   ]
 }
