ignore the filwe

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -6,6 +6,7 @@ ignores:
   - 'content/en/tutorials/cloud-pods-collaborative-debugging/*'
   - 'content/en/user-guide/integrations/terraform/*'
   - 'content/en/user-guide/aws/events/*'
+  - 'content/en/references/coverage/_index.md'
 customRules:
   - markdownlint-rule-max-one-sentence-per-line
 config:
