change reviewer for parity docs update

--- a/.github/workflows/docs-parity-updates.yml
+++ b/.github/workflows/docs-parity-updates.yml
@@ -129,4 +129,4 @@ jobs:
           committer: "LocalStack Bot <localstack-bot@users.noreply.github.com>"
           commit-message: "update generated parity coverage docs"
           token: ${{ secrets.PRO_ACCESS_TOKEN }}
-          reviewers: steffyP
+          reviewers: HarshCasper
