--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -7,6 +7,7 @@ ignores:
   - 'content/en/user-guide/integrations/terraform/*'
   - 'content/en/user-guide/aws/events/*'
   - 'content/en/references/coverage/_index.md'
+  - 'content/en/getting-started/installation.md'
 customRules:
   - markdownlint-rule-max-one-sentence-per-line
 config:
@@ -25,3 +26,4 @@ config:
   MD032: false # Lists should be surrounded by blank lines
   MD018: false # No space after hash on atx style header
   MD022: false # Headers should be surrounded by blank lines
+  MD037: false # Spaces inside emphasis markers
