add dms postgres to kinesis use case sample to dev hub

--- a/data/developerhub/applications.json
+++ b/data/developerhub/applications.json
@@ -402,6 +402,19 @@
       "complexity": ["intermediate"],
       "pro": true,
       "cloudpods": false
+    },
+    {
+      "title": "Deploying a Database Migration Pipeline with DMS, Kinesis, and PostgreSQL",
+      "description": "Sample application demonstrating how to use Database Migration Service (DMS) to use PostgreSQL as a source and Kinesis as a target to a create CDC task using the CDK in Python.",
+      "url": "https://github.com/localstack-samples/sample-dms-postgresql-kinesis",
+      "teaser": "https://raw.githubusercontent.com/localstack-samples/sample-dms-postgresql-kinesis/main/dms-postgres-to-kinesis.jpg",
+      "services": ["dms", "kns", "postgres"],
+      "deployment": ["cdk"],
+      "platform": ["python"],
+      "tags": ["databases", "migration"],
+      "complexity": ["intermediate"],
+      "pro": true,
+      "cloudpods": false
     }
   ]
 }
