--- a/data/developerhub/applications.json
+++ b/data/developerhub/applications.json
@@ -408,7 +408,7 @@
       "description": "Sample application demonstrating how to use Database Migration Service (DMS) to use PostgreSQL as a source and Kinesis as a target to a create CDC task using the CDK in Python.",
       "url": "https://github.com/localstack-samples/sample-dms-postgresql-kinesis",
       "teaser": "https://raw.githubusercontent.com/localstack-samples/sample-dms-postgresql-kinesis/main/dms-postgres-to-kinesis.jpg",
-      "services": ["dms", "kns", "postgres"],
+      "services": ["dms", "kns", "rds"],
       "deployment": ["cdk"],
       "platform": ["python"],
       "tags": ["databases", "migration"],
