--- a/.github/issue_templates/docs-bug.yaml
+++ b/.github/issue_templates/docs-bug.yaml
@@ -14,7 +14,7 @@ body:
     attributes:
       label: Describe the bug you found in LocalStack Docs.
       description: Is there a bug in one of our code snippets? Did we explain a concept incorrectly? Please share a clear and concise description of what the bug or mistake is.
-      placeholder: "I would like to file an LocalStack Docs Bug 🐞 report about..."
+      placeholder: "I would like to file a LocalStack Docs Bug 🐞 report about..."
     validations:
       required: true
   - type: textarea
