--- a/.github/config.yml
+++ b/.github/config.yml
@@ -1,4 +1,4 @@
-blank_issues_enabled: true
+blank_issues_enabled: false
 contact_links:
   - name: 📖 LocalStack Documentation
     url: https://docs.localstack.cloud/overview/ 
