--- a/.github/workflows/docs-replicator-updates.yml
+++ b/.github/workflows/docs-replicator-updates.yml
@@ -2,6 +2,9 @@ name: Update Parity Docs
 on:
   schedule:
     - cron: 0 5 * * MON
+  push:
+    branches:
+      - automate-replicator-coverage
   workflow_dispatch:
     inputs:
         targetBranch:
