--- a/.github/workflows/docs-replicator-updates.yml
+++ b/.github/workflows/docs-replicator-updates.yml
@@ -31,6 +31,7 @@ jobs:
         uses: LocalStack/setup-localstack@v0.2.3
         with:
           image-tag: 'latest'
+          use-pro: true
         env:
           LOCALSTACK_AUTH_TOKEN: ${{ secrets.LOCALSTACK_AUTH_TOKEN }}
 
