Script to generate md file from ext and community feature files

--- a/.github/workflows/docs-update-feature-catalog.yml
+++ b/.github/workflows/docs-update-feature-catalog.yml
@@ -12,7 +12,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: 'localstack/docs'
-          path: 'localstack-docs'
 
       - name: Download features files from Collect feature files (GitHub)
         uses: actions/download-artifact@v4
@@ -21,27 +20,28 @@ jobs:
           name: features-files
           repository: localstack/localstack
 
-#      - name: Download features files from Collect feature files from PRO (GitHub)
-#        uses: actions/download-artifact@v4
-#        with:
-#          path: features-files-ext
-#          name: features-files-ext
-#          repository: localstack/localstack
-#          github-token: ${{ secrets.GH_PAT }} # token with actions:read permissions on target repo
+      - name: Download features files from Collect feature files from PRO (GitHub)
+        uses: actions/download-artifact@v4
+        with:
+          path: features-files-ext
+          name: features-files-ext
+          repository: localstack/localstack
+          github-token: ${{ secrets.GH_AC_UPDATE_FEATURE_CATALOG }}
 
       - name: Generate feature catalog page
         run: python3 scripts/generate_feature_catalog_page.py
+        env:
+          PATH_FEATURE_FILES_COMMUNITY: 'features-files-community'
+          PATH_FEATURE_FILES_EXT: 'features-files-ext'
+          PATH_FEATURE_CATALOG_MD: 'content/en/user-guide/aws/feature-coverage.md'
 
-  pr-with-updated-feature-catalog:
-    name: Create PR with updated feature catalog file
-    runs-on: ubuntu-latest
-    steps:
       - name: Create PR
         uses: peter-evans/create-pull-request@v7
         with:
           title: "Update Feature catalog page"
           body: "This PR updates Feature catalog page based on feature catalog YAML files"
           branch: "update-feature-catalog"
+          add-paths: 'content/en/user-guide/aws/feature-coverage.md'
           author: "LocalStack Bot <localstack-bot@users.noreply.github.com>"
           committer: "LocalStack Bot <localstack-bot@users.noreply.github.com>"
           commit-message: "Upgrade feature catalog"
