--- a/.github/workflows/docs-update-feature-catalog.yml
+++ b/.github/workflows/docs-update-feature-catalog.yml
@@ -10,8 +10,6 @@ jobs:
     steps:
       - name: Checkout docs repository
         uses: actions/checkout@v4
-        with:
-          repository: 'localstack/docs'
 
       - name: Download features files from Collect feature files (GitHub)
         uses: actions/download-artifact@v4
@@ -41,7 +39,7 @@ jobs:
           title: "Update Feature catalog page"
           body: "This PR updates Feature catalog page based on feature catalog YAML files"
           branch: "update-feature-catalog"
-          add-paths: 'content/en/user-guide/aws/feature-coverage.md'
+          add-paths: "content/en/user-guide/aws/feature-coverage.md"
           author: "LocalStack Bot <localstack-bot@users.noreply.github.com>"
           committer: "LocalStack Bot <localstack-bot@users.noreply.github.com>"
           commit-message: "Upgrade feature catalog"
