--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,16 +3,7 @@
 ######################
 
 # CODEOWNERS
-/CODEOWNERS @HarshCasper @alexrashed
-
-# CI
-/content/en/user-guide/ci/ @lakkeger
-
-# pulumi
-/content/en/user-guide/integrations/pulumi/ @lakkeger
-
-# terraform
-/content/en/user-guide/integrations/terraform/ @lakkeger
+/CODEOWNERS @HarshCasper @quetzalliwrites
 
 # network troubleshooting guide
 /content/en/references/network-troubleshooting @simonrw @joe4dev @dfangl
