--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,7 @@ updates:
     schedule:
       interval: "weekly"
     reviewers:
-      - "alexrashed"
+      - "HarshCasper"
+      - "quetzalliwrites"
     labels:
       - "dependencies"
