--- a/data/developerhub/applications.json
+++ b/data/developerhub/applications.json
@@ -301,7 +301,7 @@
     },
     {
       "title": "Multi-IaC DevOps pipeline with Lambda, S3 & API Gateway",
-      "description": "Serverless applicaton deploying API Gateway, Lambda, S3, and other resources for DevOps with multiple IaC flavors, local integration testing with PyTest, Lambda Hot reloading, and environment configuration that deploys to LocalStack and AWS",
+      "description": "Serverless application deploying API Gateway, Lambda, S3, and other resources for DevOps with multiple IaC flavors, local integration testing with PyTest, Lambda Hot reloading, and environment configuration that deploys to LocalStack and AWS",
       "url": "https://github.com/localstack-samples/multi-iac-devops",
       "teaser": "https://raw.githubusercontent.com/localstack-samples/multi-iac-devops/main/docs/img/localstack-architecture-diagram.png",
       "services": ["s3", "lmb", "agw"],
