--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "localstack-docs",
   "version": "0.0.1",
-  "description": "Hugo theme for technical documentation.",
+  "description": "Sources of the LocalStack documentation site.",
   "main": "none.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,13 +19,13 @@
   },
   "homepage": "https://github.com/localstack/docs#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "dedent": "^1.5.1",
-    "inquirer": "^8.2.6",
-    "markdownlint": "^0.34.0",
+    "autoprefixer": "^10.4.21",
+    "dedent": "^1.5.3",
+    "inquirer": "^12.6.0",
+    "markdownlint": "^0.37.4",
     "markdownlint-rule-max-one-sentence-per-line": "^0.0.2",
-    "postcss": "^8.3.7",
-    "postcss-cli": "^9.0.2",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
     "stylelint-config-standard": "^34.0.0"
   }
 }
