--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -27,3 +27,4 @@ config:
   MD018: false # No space after hash on atx style header
   MD022: false # Headers should be surrounded by blank lines
   MD037: false # Spaces inside emphasis markers
+  MD059: false # Link text should be descriptive
