--- a/config.toml
+++ b/config.toml
@@ -155,6 +155,7 @@ sidebar_menu_compact = true
 sidebar_search_disable = true
 # Limit for number of children pages (This is an undocumented option)
 sidebar_menu_truncate = 128
+showLightDarkModeMenu = true
 
 # Adds a H2 section titled "Feedback" to the bottom of each doc. The responses are sent to Google Analytics as events.
 # This feature depends on [services.googleAnalytics] and will be disabled if "services.googleAnalytics.id" is not set.
