--- a/.github/workflows/docs-parity-updates.yml
+++ b/.github/workflows/docs-parity-updates.yml
@@ -38,8 +38,7 @@ jobs:
       - name: Download scripts from meta repository
         run: |
           curl -o /tmp/get_latest_github_metrics.sh -L https://raw.githubusercontent.com/localstack/meta/main/scripts/get_latest_github_metrics.sh -H 'Accept: application/vnd.github.v3.raw'
-          curl -o /tmp/get_latest_circleci_metrics.sh -L https://raw.githubusercontent.com/localstack/meta/main/scripts/get_latest_circleci_metrics.sh -H 'Accept: application/vnd.github.v3.raw'
-          chmod +x /tmp/get_latest_github_metrics.sh /tmp/get_latest_circleci_metrics.sh 
+          chmod +x /tmp/get_latest_github_metrics.sh
 
       - name: Download metrics data from Moto Integration test pipeline (GitHub)
         working-directory: docs
@@ -82,7 +81,7 @@ jobs:
           WORKFLOW: "AWS / Build, Test, Push" 
           RESOURCE_FOLDER: "metrics-implementation-details"
 
-      - name: Download metrics data from latest Community test run (CircleCI)
+      - name: Download metrics data from latest Community test run (GitHub)
         working-directory: docs
         run: /tmp/get_latest_github_metrics.sh ./target master
         env:
