CI: download matrics data from community

--- a/.github/workflows/docs-parity-updates.yml
+++ b/.github/workflows/docs-parity-updates.yml
@@ -81,7 +81,16 @@ jobs:
           WORKFLOW: "AWS / Build, Test, Push" 
           RESOURCE_FOLDER: "metrics-implementation-details"
 
-      - name: Download metrics data from latest Community test run (GitHub)
+      - name: Download metrics data from Community pipeline (GitHub)
+        working-directory: docs
+        run: /tmp/get_latest_github_metrics.sh ./target master
+        env:
+          GITHUB_TOKEN: ${{ secrets.PRO_ACCESS_TOKEN }}
+          REPOSITORY_NAME: localstack
+          ARTIFACT_ID: test-results-integration-*
+          WORKFLOW: "AWS / Build, Test, Push"
+
+      - name: Download coverage (capture-notimplemented) data from Community pipeline (GitHub)
         working-directory: docs
         run: /tmp/get_latest_github_metrics.sh ./target master
         env:
